fix: about links too large on mobile

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -73,6 +73,10 @@ body {
 
 }
 
+#last-level {
+    margin-bottom: 1.5rem;
+}
+
 #home {
     @include mobile {
         margin-top: 4em;
